--- a/style.css
+++ b/style.css
@@ -40,19 +40,21 @@ nav{
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(222,118,27,1) 100%, rgba(0,212,255,1) 100%);
 }
 nav>a{
-    color: white;
-    background-color: black;
-    border: 10px solid black;
-    border-radius: 4px;
-    margin: 30px;
+    color: white; 
+    padding: 10px;
     text-decoration: none;
+    font-weight: bold;
+    transition-duration: .5;
 }
 nav>a:hover{
-    border-top-right-radius: 10px;
+    background-color: rgba(222,118,27);
+    color: black;
 }
 #format{
     height: 50vh;
+    margin: auto;
     padding: 30px;
+
     
     background-attachment: fixed;
 
