--- a/style.css
+++ b/style.css
@@ -25,19 +25,21 @@ header{
     font-size: 2.5em;
     height: 30vh;
     background: rgb(2,0,36);
-background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(222,118,27,1) 100%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(222,118,27,1) 100%, rgba(0,212,255,1) 100%);
 }
 header>p{
     font-size: 25px;
     font-family: var(--fonte6);
-    text-decoration: none;
-    padding-left: 300px;
+    max-width: 500px;
+    margin: auto;
+    
 }
 
 nav{
     
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(222,118,27,1) 100%, rgba(0,212,255,1) 100%);
+    padding-top: 50px;
 }
 nav>a{
     color: white; 
@@ -66,10 +68,12 @@ nav>a:hover{
 
 #format>p{
     
-    padding: 30px;
-    line-height: 40px;
+    
     font-family: var(--fonte4);
-    font-size: 1.5em;
+    font-size: 25px;
+    max-width: 600px;
+    padding: 30px;
+    margin: auto;
 }
 #format> h1:hover{
     display: block;
@@ -90,8 +94,9 @@ nav>a:hover{
 }
 #para{
     background-color: rgb(13, 57, 95);
+    font-size: 0.5;
     height: 20vh;
-    max-width: 600px;
+    max-width:1000px ;
     background: transparent;
     box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.219);
 }
@@ -127,6 +132,8 @@ nav>a:hover{
     background-size: cover;
 }
 footer{
+    background: transparent;
+    color: white;
     text-align: center;
     background-color: rgb(58, 59, 59);
 }
@@ -138,7 +145,6 @@ footer a:hover{
     color: rgb(235, 146, 30);
     text-decoration: underline;
 }
-
 img{
     border-radius: 10px;
 }
