--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ nav>a:hover{
     margin: auto;
 }
 #format> h1:hover{
-    display: block;
+    background-color: rgba(222,118,27); ;
 }
 #format>button{
     color: rgb(12, 12, 12);
@@ -96,7 +96,7 @@ nav>a:hover{
     background-color: rgb(13, 57, 95);
     font-size: 0.5;
     height: 20vh;
-    max-width:1000px ;
+    max-width:max-content ;
     background: transparent;
     box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.219);
 }
