--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ nav>a:hover{
     height: 20vh;
     margin: 15px 0px;
     line-height: 1em;
+    text-indent: 30px;
     background: transparent;
     box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.219);
 }
