--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ header{
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(222,118,27,1) 100%, rgba(0,212,255,1) 100%);
 }
-header>p{
+header p{
     font-size: 25px;
     font-family: var(--fonte6);
     max-width: 500px;
@@ -54,7 +54,6 @@ nav>a:hover{
 }
 #format{
     height: 50vh;
-    margin: auto;
     padding: 30px;
 
     
@@ -73,7 +72,7 @@ nav>a:hover{
     font-size: 25px;
     max-width: 600px;
     padding: 30px;
-    margin: auto;
+    
 }
 #format>button{
     color: rgb(12, 12, 12);
